@@ -40,7 +40,7 @@ ok(!defined($invalid_dir_obj), 'Object creation fails with invalid directory');
 
 # Test missing required arguments in `new`
 eval { Genealogy::Wills->new('foo') };
-like($@, qr/Invalid arguments passed/, 'Fails gracefully when required arguments are missing in `new`');
+like($@, qr/^Usage:/, 'Fails gracefully when required arguments are missing in `new`');
 
 # Test object properties
 is($obj->{'directory'}, $temp_dir, 'Directory property set correctly');
